# CS163-Group3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RULES.md  run.sh
Dictionary/: CMakeLists.txt  ConvertingTable.txt  DatasetIdentifiers.h  English_English_serialization1.txt  Search_and_AddToFav.cpp  Trie.cpp  Trie.h  Trie.ilk  TrieNode.cpp  TrieNode.h  checkerSubString.cpp  checkerSubString.h  history.cpp  main.cpp
Trie/: ConvertingTable.txt  Trie.cpp  Trie.h  Trie.ilk
data_set/: English_English_K21.txt  English_English_history.txt  English_English_original1.txt  English_Vietnamese_K21.txt  English_Vietnamese_original.txt  English_Vietnamese_serializationDFS.txt  Vietnamese_English_original.txt  Vietnamese_English_serializationDFS.txt  favorite.txt  favorite_Eng_Eng.txt  history.txt  slang_emoji_original.txt  slang_emoji_serializationDFS.txt
src/: Application.cpp  Application.hpp  CMakeLists.txt  Global.hpp  button.cpp  button.hpp  gameGUI.cpp  gameGUI.hpp  main.cpp
src/frontend/: AddWordScreen.cpp  AddWordScreen.hpp  CMakeLists.txt  Component.cpp  Component.hpp  DefinitionFrame.cpp  DefinitionFrame.hpp  EditDefinition.cpp  EditDefinition.hpp  HistoryBar.cpp  HistoryBar.hpp  InGame.cpp  InGame.hpp  SideBar.cpp  SideBar.hpp  TextBox.cpp  TextBox.h  TextBox.hpp  button.cpp  button.hpp  gameMode.cpp  gameMode.hpp  header.cpp  header.hpp  wordToDefGame.cpp  wordToDefGame.hpp
